# mlang

./: CMakeLists.txt  LICENSE  README.md  llvm-setup.md  setup.txt
release/: buildins.bc
samples/: aritmetic.mlang  arrays.mlang  cast.mlang  do_while.mlang  factorial.mlang  fibonacci.mlang  for.mlang  foreach.mlang  hello_world.mlang  if_else.mlang  import.mlang  input.mlang  second.mlang  string.mlang  while.mlang
src/: CMakeLists.txt  array.cpp  array.h  assignment.cpp  assignment.h  ast.cpp  ast.h  binaryop.cpp  binaryop.h  break.cpp  break.h  buildins.cpp  buildins.h  cast.cpp  cast.h  codegen.cpp  codegen.h  comparison.cpp  comparison.h  conditional.cpp  conditional.h  foreach.cpp  foreach.h  forloop.cpp  forloop.h  free.cpp  free.h  function.cpp  function.h  lexer.l  main.cpp  parser.y  range.cpp  range.h  return.cpp  return.h  str.cpp  str.h  str_join.cpp  str_join.h  (+9 more)
